# GestaltQuestions

./: .gitignore  Makefile  README.md  compose.dev.yaml  compose.yaml
ai_workspace/: Dockerfile  Dockerfile.dev  Dockerfile.langgraph  README.md  models.py  pyproject.toml  pytest.ini  requirements.txt
ai_workspace/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
ai_workspace/ai_base/: settings.py
ai_workspace/ai_workspace/ai_base/: ReadMe.txt  __init__.py  base_models.py  multimodel_io.py  settings.py
ai_workspace/ai_workspace/api/: main.py
ai_workspace/ai_workspace/code_generator/: agent_main.py  document_loader.py  prompts.py  question_analysis_agent.py  retrievers.py  vector_store.py
ai_workspace/ai_workspace/code_validation/: code_validation_graph.py
ai_workspace/ai_workspace/data_parser/: __init__.py  encoder_base.py  image_parser.py  pdf_parser.py
ai_workspace/ai_workspace/langgraph_project/: .env.example  .gitignore  Makefile  README.md  langgraph.json  pyproject.toml
ai_workspace/ai_workspace/models/: models.py
ai_workspace/ai_workspace/testing/: main.py
ai_workspace/ai_workspace/utils/: __init__.py  image_utils.py  utils.py
ai_workspace/api/: main.py
ai_workspace/app_test/: code_generation.py  test_basic.py
ai_workspace/app_test/ai_base/: image_processing.py
ai_workspace/classification/course_classification/: course_catalog_vectorstore.py
ai_workspace/code_generator/: agent_main.py  question_analysis_agent.py  retrievers.py  vector_store.py
ai_workspace/code_generator/agents/: solution_html_agent.py
ai_workspace/code_generator/graphs/: server_js_graph.py  server_py_graph.py  solution_html_graph.py
ai_workspace/extraction/extract_derivation/: main.py
ai_workspace/utils/: utils.py
code_sandbox/: Dockerfile  README.md  Readme.md  app.py  executor.py  package-lock.json  package.json  pyproject.toml  pytest.ini  railway.json
code_sandbox/api/: app.py  executor.py  main.py
code_sandbox/app_test/: conftest.py  test_endpoint.py  test_run_js.py  test_run_py.py  test_runtime_switcher.py
code_sandbox/code_runner/: __init__.py  javascript_runner.py  models.py  python_runner.py  runtime_switcher.py
code_sandbox/code_sandbox/: dummy.py  utils.py
code_sandbox/src/: main.py
code_sandbox/src/core/: logger.py  (+1 more)
(+941 files in other folders)
